--- a/registration_site/templates/index.html
+++ b/registration_site/templates/index.html
@@ -22,15 +22,72 @@
         {{ render_field(form.gender) }}
         {{ render_field(form.date_of_birth) }}
         {{ render_field(form.contact_number) }}
-
         {{ render_field(form.home_address) }}
+        {{ render_field(form.pin_code) }}
+
         {{ render_field(form.country) }}
         {{ render_field(form.state) }}
         {{ render_field(form.city) }}
-
         {{ render_field(form.email) }}
         {{ render_field(form.religion) }}
         {{ render_field(form.caste) }}
+        {{ render_field(form.reservation) }}
+
+        {{ render_field(form.has_disability) }}
+        {{ render_field(form.disability) }}
+
+        {{ render_field(form.marital_status) }}
+
+        {{ render_field(form.identification_type) }}
+        {{ render_field(form.aadhar_card_number) }}
+
+        {{ render_field(form.applied_before) }}
+
+        {{ render_field(form.school) }}
+        {{ render_field(form.additional_school) }}
+        {{ render_field(form.stream) }}
+        {{ render_field(form.vocational_course_details) }}
+        {{ render_field(form.school_10th) }}
+        {{ render_field(form.school_address) }}
+
+
+        {{ render_field(form.recent_10th_12th) }}
+
+        {{ render_field(form.matric_pct) }}
+        {{ render_field(form.distinction_subjects_10th) }}
+        {{ render_field(form.board_10th) }}
+        {{ render_field(form.passing_year_10th) }}
+        {{ render_field(form.current_class) }}
+
+        {{ render_field(form.excellence_field) }}
+        {{ render_field(form.hobbies) }}
+
+        {{ render_field(form.fathers_name) }}
+        {{ render_field(form.fathers_age) }}
+        {{ render_field(form.fathers_gender) }}
+        {{ render_field(form.fathers_qualification) }}
+        {{ render_field(form.fathers_marital_status) }}
+        {{ render_field(form.fathers_occupation) }}
+        {{ render_field(form.fathers_monthly_income) }}
+
+        {{ render_field(form.mothers_name) }}
+        {{ render_field(form.mothers_age) }}
+        {{ render_field(form.mothers_gender) }}
+        {{ render_field(form.mothers_qualification) }}
+        {{ render_field(form.mothers_marital_status) }}
+        {{ render_field(form.mothers_occupation) }}
+        {{ render_field(form.mothers_monthly_income) }}
+
+        {{ render_field(form.has_single_parents) }}
+        {{ render_field(form.who_is_single_parent) }}
+        {{ render_field(form.guardian_details) }}
+
+        {{ render_field(form.has_sibling) }}
+        {{ render_field(form.sibling_details) }}
+
+        {{ render_field(form.annual_family_income) }}
+
+        {{ render_field(form.sibling_beneficiary) }}
 
         <div class="form-group mt-4">
             <button class="btn btn-lg btn-success" type="submit">
